Fix visibility of images thumb Changed z-index and opacity

--- a/themes/Newspaper/includes/less_files/custom_style_cna.less
+++ b/themes/Newspaper/includes/less_files/custom_style_cna.less
@@ -2931,7 +2931,7 @@ div[class*="post-template-cna"] {
 				height: 100%;
 				width: 100%;
 				position: absolute;
-				z-index: 1;
+				z-index: 2;
 				background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.2) 100%);
 				filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#b3000000', GradientType=0);
 				-webkit-transition: background-color 0.3s ease;
