--- a/themes/Newspaper/includes/less_files/style_default.less
+++ b/themes/Newspaper/includes/less_files/style_default.less
@@ -28333,7 +28333,7 @@ body.activity-permalink #buddypress div.activity-comments ul li {
 }
 body.td-animation-stack-type0 .td-animation-stack .entry-thumb,
 body.td-animation-stack-type0 .post img {
-  opacity: 0;
+  opacity: 1;
 }
 .td-animation-stack-type0-2 {
   opacity: 1 !important;
